Created cruzadinha toolkit

--- a/index.html
+++ b/index.html
@@ -73,17 +73,17 @@
                     </span>
                 </a>
 
-                <!-- FERRAMENTA: Gerador de Palavra Cruzada (Em breve) -->
-                <a href="#" class="tool-card">
+                <!-- FERRAMENTA: Gerador de Cruzadinha -->
+                <a href="tools/cruzadinha/index.html" class="tool-card">
                     <div class="tool-icon">📝</div>
                     <h4 class="tool-title">Gerador de Cruzadinha</h4>
                     <p class="tool-description">
                         Crie palavras cruzadas personalizadas com suas próprias palavras 
                         e dicas. Ideal para revisar vocabulário de forma divertida.
                     </p>
-                    <span class="tool-status status-coming-soon">
+                    <span class="tool-status status-available">
                         <span class="status-indicator"></span>
-                        Em breve
+                        Disponível
                     </span>
                 </a>
 
