--- a/tools/bingo/index.html
+++ b/tools/bingo/index.html
@@ -669,7 +669,7 @@
 
             <div class="form-group">
                 <label for="options">Lista de Opções (uma por linha)</label>
-                <textarea id="options" placeholder="Apple&#10;Banana&#10;Orange&#10;Grape&#10;Watermelon&#10;Strawberry&#10;Pineapple&#10;Mango&#10;Kiwi"></textarea>
+                <textarea id="options" placeholder="Apple&#10;Banana&#10;Orange&#10;Grape&#10;Watermelon&#10;Strawberry&#10;Pineapple&#10;Mango&#10;Kiwi" rows="12"></textarea>
             </div>
 
             <div class="alert" id="alert">
